# zukunftstag-2025

./: README.md  pyproject.toml
games/: bandit.py  kopf_zahl.py  wuerfel.py
